[package]
name = "reliefweb"
authors = ["Cyrus Pellet <cyrus.pellet@gmail.com>"]
description = "A Rust client for the ReliefWeb API"
documentation = "https://docs.rs/reliefweb-rust"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
httpmock = "0.7.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }